# phorcys

./: .editorconfig  .gitignore  Cargo.toml  README.md
exparam-server/: .eslintignore  .eslintrc.json  .prettierrc.json  .stylelintrc.json  Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
exparam-server/assets/scripts/: index.tsx
exparam-server/assets/styles/: index.pcss
exparam-server/client/: package-lock.json  package.json  tsconfig.json  webpack.config.js
phorcys-config/: Cargo.toml  README.md
phorcys-config/src/: config.rs  lib.rs
phorcys-config/src/vrchat/: dir.rs  mod.rs
phorcys-config/src/xsoverlay/: mod.rs
phorcys-config/tests/: acceptance.rs  parameters.json
phorcys-examples/: Cargo.toml  README.md
phorcys-examples/examples/: monitor.rs  notify-string.rs
phorcys-miditable/: Cargo.toml  README.md
phorcys-miditable/src/: app.rs  main.rs  midi.rs  table.rs  vrchat.rs
phorcys-miditable/src/command/: export_values.rs  list_midi_devices.rs  mod.rs  proxy_midi.rs
phorcys-monitor/: Cargo.toml
phorcys-monitor/src/: main.rs
phorcys-osc/: Cargo.toml  README.md
phorcys-osc/src/: address.rs  address_pattern.rs  bundle.rs  data.rs  error.rs  lib.rs  packet.rs
phorcys-osc/src/address/: mod.rs
phorcys-osc/src/packet/: bundle.rs  message.rs  mod.rs
vrcosc-clock/: Cargo.toml  README.md
vrcosc-clock/config/: analog-basic.lua
vrcosc-clock/src/: app.rs  data.rs  main.rs  runner.rs  sender.rs
