[package]
name = "phorcys-miditable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
async-std = { version = "1.10.0", features = ["attributes"] }
clap = { version = "3.1.0", features = ["derive"] }
flexi_logger = "0.22.3"
futures = "0.3.21"
log = "0.4.14"
midir = "0.7.0"
midly = "0.5.2"
phorcys-config = { path = "../phorcys-config" }
phorcys-osc = { path = "../phorcys-osc" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.5.8"
